--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Utility functions to use at Booking.com
 Version: 0.1
 Date: 2016-02-02
 Author: Hugo Silva
-Maintainer: hugo.silva@booking.com
+Maintainer: Hugo Silva <hugo.silva@booking.com>
 Description: Contains a set of functions useful for us to use while doing
     analyses in HR
 License: Private package
